--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    
+    <div class="calculator">
+        <input type="text" id="display" disabled>
+        <div class="buttons">
+            <button onclick="clearDisplay()">C</button>
+            <button onclick="appendValue('/')">/</button>
+            <button onclick="appendValue('*')">*</button>
+            
 </body>
 </html>
