--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <button onclick="appendValue('-')">-</button>
             <button onclick="appendValue('4')">4</button>
             <button onclick="appendValue('5')">5</button>
+            <button onclick="appendValue('6')">6</button>
+            <button onclick="appendValue('+')">+</button>
+            <button onclick="appendValue('1')">1</button>
+            <button onclick="appendValue('2')">2</button>
+            <button onclick="appendValue('3')">3</button>
 
 </body>
 </html>
