--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
             <button onclick="appendValue('1')">1</button>
             <button onclick="appendValue('2')">2</button>
             <button onclick="appendValue('3')">3</button>
-
+            <button class="equal" onclick="calculateResult()">=</button>
+            <button onclick="appendValue('%')">%</button>
+            <button onclick="appendValue('0')">0</button>
+            <button onclick="appendValue('.')">.</button>
+        </div>
+        <div id="result"></div>
 </body>
 </html>
