--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <div class="header">
+        <h1>Simple Calculator</h1>
+    </div>
     <div class="calculator">
         <input type="text" id="display" disabled>
         <div class="buttons">
